--- a/src/PaperSelectionScreen.scss
+++ b/src/PaperSelectionScreen.scss
@@ -1,3 +1,4 @@
+@use "components/Button";
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
@@ -12,5 +13,13 @@ div.papers-screen {
     > .ps-selection {
         @apply w-full flex flex-col items-center justify-start p-1 overflow-y-scroll overflow-x-hidden bg-black bg-opacity-50;
         height: 72vh;
+    }
+
+    > .ps-footer {
+        @apply w-full flex flex-col items-center;
+        > .ps-footer1 {
+            @apply flex flex-row justify-between;
+            @include Button.std-btn;
+        }
     }
 }
